--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "url": "https://github.com/gyandeeps/grouch/issues"
   },
   "dependencies": {
-    "eslint": ">=0.8.0",
+    "eslint": ">=0.12.0",
     "grunt": "0.4.5",
     "grunt-contrib-jasmine": ">=0.7.0",
     "grunt-template-jasmine-istanbul": ">=0.3.0",
     "optionator": ">=0.4.0",
     "node-dir": ">=0.1.6",
-    "minimatch": ">=1.0.0"
+    "minimatch": ">=1.0.0",
+    "karma": ">=0.12.0",
+    "karma-jasmine": ">=0.2.3",
+    "karma-chrome-launcher": ">=0.1.5",
+    "karma-firefox-launcher": ">=0.1.3",
+    "karma-ie-launcher": ">=0.1.5",
+    "karma-safari-launcher": ">=0.1.1"
   },
   "devDependencies": {
     "mocha": ">=1.21.4",
