--- a/.eslintrc
+++ b/.eslintrc
@@ -5,21 +5,42 @@
         "mocha": true
     },
     "rules": {
-        "strict": 0,
-        "quotes": 1,
+        "quotes": 2,
         "no-use-before-define": 0,
         "eol-last": 1,
         "no-mixed-spaces-and-tabs": 2,
-        "radix":1,
-        "semi": 1,
-        "brace-style": [1, "stroustrup"],
-        "no-space-before-semi": 1,
-        "space-return-throw-case": 1,
-        "no-spaced-func": 1,
-        "space-after-keywords":[1, "never"],
+        "radix": 2,
+        "semi": 2,
+        "brace-style": [2, "stroustrup"],
+        "no-space-before-semi": 2,
+        "no-spaced-func": 2,
+        "space-after-keywords":[2, "never"],
+        "space-after-function-name": [2, "never"],
+        "space-before-blocks": [2, "never"],
+        "space-in-brackets": [2, "never"],
+        "space-in-parens": [2, "never"],
+        "space-return-throw-case": 2,
         "new-cap":[2, "newIsCap"],
         "vars-on-top": 2,
-        "no-trailing-spaces": 0
+        "no-trailing-spaces": 0,
+        "indent": [2, 4, {
+            "indentSwitchCase": true
+        }],
+        "no-multiple-empty-lines": [2, {
+            "max": 2
+        }],
+        "key-spacing": [2, {
+            "beforeColon": false,
+            "afterColon": true
+        }],
+        "comma-style": [2, "last"],
+        "consistent-this": [2, "self"],
+        "no-eq-null": 2,
+        "no-floating-decimal": 2,
+        "no-undefined": 2,
+        "default-case": 2,
+        "no-lonely-if": 1,
+        "no-nested-ternary": 2
     },
     "globals": {
         "$": true
