--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grouch",
   "version": "0.2.0",
-  "description": "Run test files",
+  "description": "Test runner and linter for any front end project",
   "author": "Gyandeep Singh <gyandeeps@gmail.com>",
   "license": "BSD",
   "repository": "https://github.com/gyandeeps/grouch",
@@ -13,7 +13,7 @@
     "url": "https://github.com/gyandeeps/grouch/issues"
   },
   "dependencies": {
-    "eslint": ">=0.14.0",
+    "eslint": ">=0.15.0",
     "grunt": "0.4.5",
     "grunt-contrib-jasmine": ">=0.7.0",
     "grunt-template-jasmine-istanbul": ">=0.3.0",
@@ -25,7 +25,8 @@
     "karma-chrome-launcher": ">=0.1.5",
     "karma-firefox-launcher": ">=0.1.3",
     "karma-ie-launcher": ">=0.1.5",
-    "karma-safari-launcher": ">=0.1.1"
+    "karma-safari-launcher": ">=0.1.1",
+    "karma-opera-launcher": ">=0.1.0"
   },
   "devDependencies": {
     "mocha": ">=1.21.4",
