--- a/.eslintrc
+++ b/.eslintrc
@@ -1,49 +1,12 @@
 {
     "env": {
         "node": true,
-        "browser": true,
         "mocha": true
     },
+    "extends": "eslint-config-ideal",
     "rules": {
-        "quotes": 2,
-        "no-use-before-define": 0,
-        "eol-last": 1,
-        "no-mixed-spaces-and-tabs": 2,
-        "radix": 2,
-        "semi": 2,
-        "brace-style": [2, "stroustrup"],
-        "no-space-before-semi": 2,
-        "no-spaced-func": 2,
-        "space-after-keywords":[2, "never"],
-        "space-before-function-parentheses": [2, {
-            "anonymous": "never",
-            "named": "never"
-        }],
-        "space-before-blocks": [2, "never"],
-        "space-in-brackets": [2, "never"],
-        "space-in-parens": [2, "never"],
-        "space-return-throw-case": 2,
-        "new-cap": 2,
-        "vars-on-top": 2,
-        "no-trailing-spaces": 0,
-        "indent": [2, 4, {
-            "indentSwitchCase": true
-        }],
-        "no-multiple-empty-lines": [2, {
-            "max": 2
-        }],
-        "key-spacing": [2, {
-            "beforeColon": false,
-            "afterColon": true
-        }],
-        "comma-style": [2, "last"],
-        "consistent-this": [2, "self"],
-        "no-eq-null": 2,
-        "no-floating-decimal": 2,
-        "no-undefined": 2,
-        "default-case": 2,
-        "no-lonely-if": 1,
-        "no-nested-ternary": 2
+        "global-strict": 0,
+        "no-console": 0
     },
     "globals": {
         "$": true
