--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "url": "https://github.com/gyandeeps/grouch/issues"
   },
   "dependencies": {
-    "eslint": ">=0.15.0",
+    "eslint": "0.15.0",
     "grunt": "0.4.5",
-    "grunt-contrib-jasmine": ">=0.7.0",
-    "grunt-template-jasmine-istanbul": ">=0.3.0",
-    "optionator": ">=0.4.0",
-    "node-dir": ">=0.1.6",
-    "minimatch": ">=1.0.0",
-    "karma": ">=0.12.0",
-    "karma-jasmine": ">=0.2.3",
-    "karma-chrome-launcher": ">=0.1.5",
-    "karma-firefox-launcher": ">=0.1.3",
-    "karma-ie-launcher": ">=0.1.5",
-    "karma-safari-launcher": ">=0.1.1",
-    "karma-opera-launcher": ">=0.1.0"
+    "grunt-contrib-jasmine": "0.7.0",
+    "grunt-template-jasmine-istanbul": "0.3.0",
+    "optionator": "0.4.0",
+    "node-dir": "0.1.6",
+    "minimatch": "1.0.0",
+    "karma": "0.12.0",
+    "karma-jasmine": "0.2.3",
+    "karma-chrome-launcher": "0.1.5",
+    "karma-firefox-launcher": "0.1.3",
+    "karma-ie-launcher": "0.1.5",
+    "karma-safari-launcher": "0.1.1",
+    "karma-opera-launcher": "0.1.0"
   },
   "devDependencies": {
-    "mocha": ">=1.21.4",
-    "chai": ">=1.9.1",
+    "mocha": "1.21.4",
+    "chai": "1.9.1",
     "shelljs": "~0.3.0",
-    "istanbul": ">=0.3.2",
-    "shelljs-nodecli": ">=0.1.1",
+    "istanbul": "0.3.2",
+    "shelljs-nodecli": "0.1.1",
     "jsdoc": "latest",
-    "sinon": ">=1.10.3",
+    "sinon": "1.10.3",
     "eslint-config-ideal": "^0.1.0"
   },
   "engines": {
